# MBA-sw-engineering-AI

./: README.md  client.py  env.example  hello.proto  hello_pb2.py  hello_pb2_grpc.py  instructions.txt  main.py  pyproject.toml  sample.txt  server.py
.claude/agents/: dependency-auditor.md  dependency-modernizer.md
1-tipos-de-prompts/: 3-CoT.py  3.1-CoT-Self-consistency.py  4-ToT.py  5-SoT.py  6-ReAct.py  7-Prompt-channing.py  7-prompt_chaining_result.md
20250729-quick-wins-com-ia/: main.py  pyproject.toml
20250729-quick-wins-com-ia/docs/libs/: OPENAI.md
20250729-quick-wins-com-ia/src/1.fundamentos/: 1-hello-world.py  4-chat-prompt-template.py
7-evaluation/: README.md  main.py  pyproject.toml
7-evaluation/1-basic/: 10-bad-not-helpful.py  6-embedding-distance-eval.py  8-bad-verbose.py  9-bad-hallucination.py  upload_dataset.py
7-evaluation/shared/: evaluators.py
flat-buffer/: demo.py  monsters.fbs  receiver.py  sender.py
flat-buffer/mygame/: Color.py  Monster.py  Vec3.py
gRPC/: client.py  server.py
libs/: LANGCHAIN.md  PINECONE.md  PYPDF.md  PYTHON-DOTENV.md
src/: chat.py  ingest.py  search.py
src/1.fundamentos/: 1-hello-world.py  2-init-chat-model.py  3-prompt-template.py  4-chat-prompt-template.py
src/3.agentes-e-tools/: 1.agente-react-e-tools.py  2.agente-react-usando-prompt-hub.py
src/4.gerenciamento-de-memoria/: 1.armazenamento-de-historico.py  2.historico-baseado-em-sliding-window.py
src/5.loaders-e-banco-de-dados-vetoriais/: 1.carregamento-usando-WebBaseLoader.py  2.carregamento-de-pdf.py  3.ingestion-pgvector.py  4.search-vector.py
(+15 files in other folders)
