[project]
name = "20251021-desafio-tecnico-ingestao-busca-semantica-langchain-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-postgres>=0.0.15",
    "langchain-core>=0.3.74",
    "python-dotenv>=1.1.1",
    "openai>=1.102.0",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "pypdf>=6.0.0",
    "langchain-community>=0.4",
    "pydantic>=2.0",
]
